--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
 }
 
-main p {
+ p {
     color: #534C64;
 }
 
@@ -38,9 +38,12 @@ main p {
     align-items: center;
     margin: 0 200px;
 }
-
+.amer{
+    margin-left: 10px;
+    font-size: 40px;
+}
 .logo h5{
-    color: #0B0223;
+    color: #150444;
 }
 
 #logo1 {
@@ -165,3 +168,547 @@ nav li a {
     width: 300px;
 }
 
+#funny-section {
+    margin-top: 100px;
+    text-align: center;
+}
+
+#funny-section h2 {
+    color: #0B0223;
+    font-family: Work Sans;
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 0;
+    margin-top: 0;
+
+}
+
+#Funny-Videos {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: Work Sans;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 00;
+}
+
+#funny-section-img {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 30px 200px;
+
+}
+
+#funny-section-img img {
+    width: 200px;
+    height: 200px;
+
+}
+#funny-section-img p {
+    font-size: 16px;
+    font-family: w;
+    
+}
+.container{
+    position: relative;
+}
+.overlay{
+    position: absolute;
+    bottom: 73px;
+    background-color: rgba(0,0,0,0.6);
+    opacity: 0;
+    color: white;
+    font-size: 20px;
+    padding: 56px;
+    padding-top: 120px;
+    text-align: center;
+    border-radius: 12px;
+    border: 2px solid rgb(240, 127, 146);
+
+}
+.container:hover .overlay{
+    opacity: 1;
+}
+
+
+.anniversary-section {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 100px 200px;
+
+}
+
+#Play {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.anniversary-section-description {
+    margin-bottom: 100px;
+}
+
+.anniversary-section-description h2 {
+    font-size: 2rem;
+}
+
+.anniversary-section img {
+    width: 400px;
+    height: 400px;
+    margin-left: 20px;
+}
+
+.corner-img img {
+    width: 180px;
+    height: 180px;
+    position: relative;
+    bottom: 120px;
+    
+
+}
+
+.online-game {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 30px 200px;
+    margin-top: 100px;
+
+
+}
+
+.online-game-img img {
+    width: 400px;
+    height: 400px;
+
+
+}
+
+.corner-img2 img {
+    width: 180px;
+    height: 150px;
+    position: relative;
+    
+
+
+}
+
+.online-game-description {
+    text-align: center;
+}
+
+.online-game-description p {
+    font-size: 15px;
+}
+
+.career-section {
+    padding-bottom: 20px;
+    padding: 20px;
+    color: #FFF; 
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+}
+
+.Careers {
+    width: 300px;
+    height: auto;
+}
+
+.Careers p {
+    color: #FFF;
+    font-size: 13px;
+}
+
+.career-section-title {
+    margin: 30px 100px;
+
+}
+
+.career-section img {
+    float: right;
+    width: 600px;
+    margin-left: 10px;
+    height: 500px;
+    margin: -20px 100px;
+}
+
+.careers-card-title {
+    display: flex;
+    gap: 24px;
+    color: #FFF;
+
+}
+
+.careers-card-title p {
+    color: #FFF;
+    font-size: 13px;
+}
+
+.btn3 {
+    border-radius: 48px;
+    background: #FFF;
+    border: none;
+    padding: 10px 15px;
+    color: #FF42A5;
+    width: 200px;
+    height: 50px;
+}
+
+#moreGames-section {
+    margin: 30px 200px;
+
+}
+
+#moreGames-section img {
+    width: 40px;
+    height: 40px;
+    margin: 0;
+    padding: 0;
+}
+
+.game-part-1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.game-part-2 {
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#btn11 {
+    background-image: url(./images/Rectangle\ 11.png);
+    
+
+}
+
+
+#btn12 {
+    background-image: url(./images/Rectangle\ 12.png);
+    
+}
+
+#btn13 {
+    background-image: url(./images/Rectangle\ 13.png);
+}
+
+#btn14 {
+    background-image: url(./images/Rectangle\ 14.png);
+}
+
+#btn15 {
+    background-image: url(./images/Rectangle\ 15.png);
+    
+
+}
+
+#btn16 {
+    background-image: url(./images/Rectangle\ 16.png);
+    
+
+}
+
+#btn17 {
+    background-image: url(./images/Rectangle\ 17.png);
+    /
+
+}
+
+#btn18 {
+    background-image: url(./images/Rectangle\ 18.png);
+}
+
+#btn19 {
+    background-image: url(./images/Rectangle\ 19.png);
+}
+.buttonALl{
+    background-repeat: no-repeat;
+    width: 138px;
+    height: 60px;
+    background-size: 40px;
+    padding-left: 36px;
+    border: none;
+    border-radius: 20px;
+}
+
+button:hover {
+    border: 2px solid pink;
+    border-radius: 20px;
+
+}
+
+
+
+
+footer {
+    height: 400px;
+    background: #0B0223;
+
+}
+
+.logo {
+    font-size: 2rem;
+    color: #FFF;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.logo h3 {
+    color: #FFF;
+    text-align: center;
+}
+
+#logo {
+    color: pink;
+
+}
+
+.footer-des {
+    color: #bbc9d1;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 13px;
+    font-family: fantasy;
+}
+
+.footer-section {
+    margin: 50px 200px;
+}
+
+.footer-social-site {
+    color: #bbc9d1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 15px;
+    margin: 20px 300px;
+    width: 350px;
+}
+
+.footer-condition {
+    font-family: fantasy;
+    font-size: 10px;
+    color: #bbc9d1;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-top: 15px;
+}
+
+.copyright {
+    font-family: fantasy;
+    font-size: 10px;
+    color: #bbc9d1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+}
+
+
+
+
+@media screen and (max-width: 576px) {
+    body {
+        margin: 0;
+
+        padding: 0;
+
+    }
+
+    #heading {
+        margin: 0;
+        flex-direction: column;
+
+    }
+    #menu{
+        margin: 0;
+    }
+
+    #menu ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #menu ul li {
+        flex-direction: column;
+        margin: 0;
+    }
+
+    #goat-section {
+        flex-direction: column;
+        margin: 0;
+        margin-top: 105px;
+
+    }
+
+    #goat-section img {
+        width: 100%;
+
+    }
+
+    #gamer-section {
+        flex-direction: column;
+        padding: 0;
+        margin-left: 0;
+
+    }
+
+    #gamer-section img {
+        width: 100%;
+    }
+
+    #gamers {
+        text-align: center;
+        margin-right: 10px;
+    }
+
+    .section-3-img {
+        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+        margin: 100px;
+        padding: 20px;
+    }
+
+    .anniversary-section,
+    .online-game {
+        flex-direction: column;
+        margin: 0;
+    }
+
+    .career-section {
+        align-items: center;
+        margin: 0;
+    }
+
+    .career-section img {
+        display: none;
+    }
+
+    .careers-card-title {
+        justify-content: center;
+    }
+
+    .Careers {
+        margin-left: -160px;
+        text-align: center;
+        width: 300px;
+    }
+
+    .game-part-1,
+    .game-part-2 {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .footer-section {
+        margin: 0;
+        align-items: center;
+    }
+
+    .logo {
+        margin-right: 194px;
+        padding: 0;
+
+
+    }
+
+}
+
+
+
+@media screen and (max-width:576px) and (min-width: 960px) {
+    body {margin: 0;
+
+        padding: 0;}
+
+    #heading {
+        margin: 0;
+        flex-direction: column;
+
+    }
+
+    #menu ul li {
+        flex-direction: column;
+    }
+
+    #goat-section {
+        flex-direction: column;
+        margin: 30%;
+    }
+
+    #goat-section img {
+        width: 100%;
+
+    }
+
+    #gamer-section {
+        flex-direction: column;
+        padding: 0;
+        margin-left: 0;
+
+    }
+
+    #gamers {
+        text-align: center;
+        margin-right: 10px;
+    }
+
+    .section-3-img {
+        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+        margin: 100px;
+        padding: 20px;
+    }
+
+    .anniversary-section,
+    .online-game {
+        flex-direction: column;
+        margin: 0;
+    }
+
+    .career-section {
+        align-items: center;
+        margin: 0;
+    }
+
+    .career-section img {
+        display: none;
+    }
+
+    .careers-card-title {
+        justify-content: center;
+    }
+
+    .Careers {
+        margin-left: -160px;
+        text-align: center;
+        width: 300px;
+    }
+
+    .game-part-1,
+    .game-part-2 {
+        flex-direction: column;
+    }
+
+    .footer-section {
+        margin: 0;
+        align-items: center;
+    }
+
+    .logo {
+        margin-right: 194px;
+
+
+    }
+}
